@@ -16,6 +16,9 @@ version 2.64
 	    Don't report spurious netlink errors, regression in
 	    2.63. Thanks to Vladislav Grishenko for the patch.
 
+	    Flag DHCP or DHCPv6 in starup logging. Thanks to 
+	    Vladislav Grishenko for the patch.
+
 
 version 2.63
             Do duplicate dhcp-host address check in --test mode.
